# FeatureHashing

./: .Rbuildignore  .gitignore  .travis.yml  Changelog  DESCRIPTION  FeatureHashing.Rproj  LICENSE  Makefile  NAMESPACE  README.Rmd  README.bib  README.html  README.md  appveyor.yml  configure  configure.ac  imp.20130606.part.txt  imp.20130607.part.txt  index.Rmd  index.html  interaction.cpp
..Rcheck/: 00install.out  FeatureHashing-Ex.R  FeatureHashing-Ex.Rout  FeatureHashing-Ex.timings
R/: RcppExports.R  callback.R  hash.mapping.R  hash.size.R  hash_internal.R  hashed.model.matrix.R  interpret.tag.R  matrix.R  matrix.size.R  simulate.split.R  split.R  tag.R  zzz.R
data/: ipinyou.rda  test.tag.rda
inst/: ftprl.R
man/: CSCMatrix-class.Rd  generate_split_callback.Rd  hash.mapping.Rd  hash.size.Rd  hashed.model.matrix.Rd  init_jiebaR_callback.Rd  intToRaw.Rd  interpret.tag.Rd  ipinyou.Rd  ls_special.Rd  matrix.size.Rd  register_callback.Rd  simulate.split.Rd  split.sim.Rd  split.simulation.Rd  tag.Rd  test.tag.Rd  test_callback.Rd
src/: Makevars  Makevars.in  MurmurHash3.cpp  MurmurHash3.h  RcppExports.cpp  as.cpp  bswap_32.cpp  bswap_32.h  callback.cpp  capi.c  capi.h  converters.cpp  converters.h  crc32.c  crc32.h  digest.c  digestlocal.h  hash_function.cpp  hash_function.h  hash_function_implementation.h  hash_internal.cpp  hashed_model_matrix.cpp  hashed_model_matrix.h  intToRaw.cpp  md5.c  md5.h  pmurhash32.c  product.cpp  rblas.cpp  split.cpp  split.h  split_callback.cpp  subsetting.cpp  tag.cpp  tag.hpp  vector_converter.h
tests/: test-as-dgCMatrix.R  (+23 more)
(+31 files in other folders)
